<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.InstructionsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRainbow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/amarillo"
        android:paddingStart="20dp"
        android:paddingEnd="30dp"
        android:paddingBottom="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnVamosArcoiris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/azul"
            android:fontFamily="@font/silka_bold_webfont"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/vamos"
            android:textSize="26sp"
            android:visibility="visible"
            app:cornerRadius="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivInstruccionesArcoiris"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <TextView
            android:id="@+id/tvInstruccionArcoiris"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/silka_bold_webfont"
            android:text="@string/presta_atenci_n_y_elige_la_opci_n_correcta"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/ivInstruccionesArcoiris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInstruccionArcoiris"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_instructions_arcoiris" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFormitas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/verde_palido_dos"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <Button
            android:id="@+id/btnVamosFormitas"
            android:layout_width="159dp"
            android:layout_height="82dp"
            android:backgroundTint="@color/naranja"
            android:fontFamily="@font/silka_bold_webfont"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/vamos"
            android:textSize="26sp"
            android:visibility="visible"
            app:cornerRadius="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegresalasASu"
            app:layout_constraintVertical_bias="0.78" />

        <TextView
            android:id="@+id/tvObservaEnQueLugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/silka_bold_webfont"
            android:text="@string/observa_en_qu_lugar_se_pone_cada_formita"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.089" />

        <TextView
            android:id="@+id/tvRegresalasASu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/silka_bold_webfont"
            android:text="@string/y_regr_salas_a_su_lugar"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivInstruccionesFormitas"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivInstruccionesFormitas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvObservaEnQueLugar"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_instructions_formitas" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCuento"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rosa_oscuro"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tvTeContareInstrucciones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/silka_bold_webfont"
            android:text="@string/te_contar_un_cuento"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ivInstruccionesCuento"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.097" />

        <TextView
            android:id="@+id/tvLeeConCalma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-25dp"
            android:layout_marginEnd="70dp"
            android:fontFamily="@font/silka_bold_webfont"
            android:text="@string/lee_con_calma_cuando_termines_da_click_aqu"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ivInstruccionesCuento"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/ivInstruccionesCuento"
            app:layout_constraintTop_toBottomOf="@+id/ivInstruccionesCuento"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/ivInstruccionesCuento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTeContareInstrucciones"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_instructions_cuento" />

        <Button
            android:id="@+id/btnSeguirCuento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/naranja"
            android:fontFamily="@font/silka_bold_webfont"
            android:paddingLeft="30dp"
            android:paddingTop="12dp"
            android:paddingRight="30dp"
            android:paddingBottom="12dp"
            android:text="@string/seguir"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:visibility="visible"
            app:cornerRadius="13dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/ivInstruccionesCuento"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.979" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSeguirCuento"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLeeConCalma"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_flecha" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCuento2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rosa_oscuro"
        android:paddingBottom="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnJugarCuento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/naranja"
            android:fontFamily="@font/silka_bold_webfont"
            android:paddingLeft="38dp"
            android:paddingTop="7dp"
            android:paddingRight="38dp"
            android:paddingBottom="16dp"
            android:text="@string/a_jugar"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="42sp"
            android:visibility="gone"
            app:cornerRadius="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTuTurno"
            app:layout_constraintVertical_bias="0.472" />

        <TextView
            android:id="@+id/tvAhoraContesta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/silka_bold_webfont"
            android:text="@string/ahora_contesta_la_pregunta"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivInstruccionesCuento2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.060000002" />

        <TextView
            android:id="@+id/tvTuTurno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:fontFamily="@font/silka_bold_webfont"
            android:text="@string/tu_turno"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivInstruccionesCuento2"
            app:layout_constraintVertical_bias="0.06999999" />

        <ImageView
            android:id="@+id/ivInstruccionesCuento2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAhoraContesta"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_instructions_cuento_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>