<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/rosa"
    tools:context=".StoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="407dp"
        android:layout_height="572dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clQuestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/btnOptionS3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="62dp"
                android:backgroundTint="@color/naranja_claro"
                android:fontFamily="@font/silka_bold_webfont"
                android:text="@string/naranja"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.609"
                app:layout_constraintStart_toEndOf="@+id/ivStoryIcon2"
                app:layout_constraintTop_toBottomOf="@+id/btnOptionS2"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btnOptionS2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/azul_oceano"
                android:fontFamily="@font/silka_bold_webfont"
                android:text="@string/azul"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.609"
                app:layout_constraintStart_toEndOf="@+id/ivStoryIcon2"
                app:layout_constraintTop_toBottomOf="@+id/btnOptionS1"
                app:layout_constraintVertical_bias="0.168" />

            <Button
                android:id="@+id/btnOptionS1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/verde"
                android:fontFamily="@font/silka_bold_webfont"
                android:text="@string/verde"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.609"
                app:layout_constraintStart_toEndOf="@+id/ivStoryIcon2"
                app:layout_constraintTop_toBottomOf="@+id/cardView4"
                app:layout_constraintVertical_bias="0.133"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/ivStoryIcon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView4"
                app:layout_constraintVertical_bias="0.229"
                tools:srcCompat="@drawable/ic_triangulo_cuentos_b" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="314dp"
                android:layout_height="56dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.069">

                <TextView
                    android:id="@+id/tvQuestionS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/silka_bold_webfont"
                    android:text="@string/de_qu_color_eran_las_rosas_del_pr_ncipe"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clStory"
            android:layout_width="409dp"
            android:layout_height="569dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/naranja_claro"
                android:text="@string/seguir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.862"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView3"
                app:layout_constraintVertical_bias="0.673" />

            <TextView
                android:id="@+id/tvTeContareUnCuento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/silka_bold_webfont"
                android:text="@string/te_contar_un_cuento"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.208"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.103" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="321dp"
                android:layout_height="290dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTeContareUnCuento"
                app:layout_constraintVertical_bias="0.285">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="318dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivStoryIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:srcCompat="@drawable/ic_triangulo_cuentos_r" />

                    <TextView
                        android:id="@+id/tvStory"
                        android:layout_width="172dp"
                        android:layout_height="183dp"
                        android:layout_marginStart="144dp"
                        android:fontFamily="@font/silka_bold_webfont"
                        android:text="@string/hab_a_una_vez_un_principe_que_amaba_su_jard_n_tenia_muchas_rosas_azules_y_algunos_tulipanes_naranjas"
                        android:textAlignment="textEnd"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/ivStoryIcon"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/ibPauseS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_pausa"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>